cnd/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/inc210983_2.h

struct Interp210983 {
    int fileno;
    struct env210983	*env210983;
};
